--- a/index.html
+++ b/index.html
@@ -1,16 +1,135 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!--Sirve para indicar que voy a utilizar la version 5 de HTML-->
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Sitio</h1>
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium soluta, fugiat repellendus delectus 
-        dolorem illo ut quidem obcaecati aliquid ducimus reiciendis et magnam quam rerum repudiandae! Et aut quia eius odit! Reprehenderit, 
-        aut, blanditiis reiciendis ab consequatur praesentium cumque exercitationem illum, rerum
-        commodi cum distinctio voluptatem dolores similique nobis omnis.</P>
-    
-</body>
+    <head>
+        <meta charset="UTF-8"><!--Conjunto de caracteres-->
+        <title>TIPOS DE DEPREDADOR</title>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link rel= "stylesheet" href="stylepag1.css"> 
+
+    </head>
+
+    <body>
+
+        <header>
+            <div class="caja">
+                <h2><img src="imagenes/bienvenidos.jpg"></h2>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="depredadores.html">Depredadores</a></li>
+                        <li><a href="teoria.html">Teoria del Depredador</a></li>
+                        <li><a href="contacto.html">Teoria </a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <h1 class = "titulo-principal">DEPREDADOR</h1>
+        <section class="principal">
+            <h2 class = "titulo-secundario">Depredador (alienígena)</h2>
+            <p>Depredador o Yautja, su nombre biológico, es una criatura alienígena de 
+                ciencia ficción, destacada por ser un cazador de trofeos humanos u otras especies alienígenas peligrosas.
+                Su primera aparición fue en 1987 en la película Predator (Depredador), apareciendo luego en novelas, cómics, 
+                fanzines y secuelas de cine de la cadena Fox como Depredador 2, Alien vs. Predator, Aliens vs. 
+                Predator: Requiem, Predators, El Depredador y Prey.
+                En las películas no tienen un nombre concreto, y se les llama Yautjas,1​ Hish,2​ o sólo Predators. Se dedican a viajar
+                 por la galaxia cazando a toda criatura digna de enfrentarse a sus habilidades y que suponga un auténtico reto. Creado por Jim Thomas y John Thomas,
+                  el Depredador recibió una dotación de avanzada tecnología, como ser camuflaje y armas de energía.</p> 
+        </section>
+        
+        <section class = "lista-tipos">
+            <h2>Tipos de depredador</h2>
+            <ol>
+                <li>Eta o indeseables</li>
+                <li>Sin sangrar</li>
+                <li>Jóvenes sangrados</li>
+                <li>Cazadores</li>
+                <li>Sangrados </li>             </li>
+                <li>Honorables</li>
+                <li>Ancianos</li>
+                <li>Notables</li>
+                <li>Antiguo depredador</li>
+                <li>Súper depredador</li>
+                <li>Mala sangre</li>
+                <li>Predalien</li>
+                <li>Depredador Big Red</li>
+                <li>Depredador máximo</li>
+                <li>Perro depredador</li>
+            </ol>
+        </section>
+
+        <section class = "music-titulo">
+            <h2 class = "music-titulos">1. Eta o Indeseables</h2>
+        </section>
+
+        <section class = "music-1">
+            <ul class = "generos">
+                <li>
+                    <h2>Descripcion</h2>
+                    <p>Los más débiles de toda la especie. Ya sea que no pueden cazar, se resisten a hacerlo o les da miedo, estos depredadores deben servir a los más fuertes incluso como esclavos.</p>   
+                </li>    
+            </ul>
+        </section>
+
+        <section class = "music-titulo">
+            <h2 class = "music-titulos">2. Sin sangrar</h2>
+        </section>
+        <section class = "music-2">
+            <ul class = "generos">
+                <li>
+                    <h2>Descripcion</h2>
+                    <p>Jóvenes depredadores que aun no tienen experiencia en la caza.</p>   
+                </li>    
+            </ul>
+        </section>
+
+        <section class = "music-titulo">
+            <h2 class = "music-titulos">3. Jovenes sangrados</h2>
+        </section>
+        <section class = "music-1">
+            <ul class = "generos">
+                <li>
+                    <h2>Descripcion</h2>
+                    <p>Después de haber cazado su primera presa importante, logran este título.</p>   
+                </li>    
+            </ul>
+        </section>
+
+        <section class = "music-titulo">
+            <h2 class = "music-titulos">4. Cazadores</h2>
+        </section>
+        <section class = "music-2">
+            <ul class = "generos">
+                <li>
+                    <h2>Descripcion</h2>
+                    <p>Depredadores que prefieren cazar en solitario y no pertenecen a ningún clan, así como el que vimos en la primera película de la saga.</p>   
+                </li>    
+            </ul>
+        </section>
+
+        <section class = "music-titulo">
+            <h2 class = "music-titulos">5. Sangrados</h2>
+        </section>
+        <section class = "music-1">
+            <ul class = "generos">
+                <li>
+                    <h2>Descripcion</h2>
+                    <p>Depredadores con experiencia en la caza con algunos trofeos importantes en su haber, entre ellos debe haber por lo menos un cráneo de xenomorfo. Ellos tienen acceso a armamento más poderoso.</p>   
+                </li>    
+            </ul>
+        </section>
+
+        <section class = "music-titulo">
+            <h2 class = "music-titulos">6. Honorables</h2>
+        </section>
+        <section class = "music-2">
+            <ul class = "generos">
+                <li>
+                    <h2>Descripcion</h2>
+                    <p>Los que han cazado a una xenomorfa reina y regularmente tienen bastantes marcas y/o trofeos por las batallas ganadas.</p>   
+                </li>    
+            </ul>
+        </section>
+
+    </body>
 </html>
